[tool.poetry]
name = "topolun_page_loader"
version = "0.1.0"
description = "Download page"
authors = ["Your Name <you@example.com>"]
packages = [  { include = "page_loader" }, ]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
