[tool.poetry]
name = "topolun_page_loader"
version = "0.3.2"
description = "Download page"
authors = ["Topolun <you@example.com>"]
packages = [  { include = "page_loader" }, ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"
beautifulsoup4 = "^4.9.0"
progress = "^1.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = "^5.3.5"

[tool.poetry.scripts]
page_loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
